@@ -4,6 +4,8 @@
              Thanks to Arthur Charguéraud <arthur@chargueraud.org> for
              pointing out this issue!
 
+             Added Apache license Version 2.0.
+
 2006-03-29:  Removed superfluous thunking of "empty" values in polymorphic
 
 2006-03-29:  Removed superfluous thunking of "empty" values in polymorphic
